--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   mysqldb:
     image: mysql
@@ -11,11 +10,13 @@ services:
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
     ports:
       - 3306:3306
+    volumes:
+    - ./sql:/docker-entrypoint-initdb.d
   scrapper:
     build: 
       context: ./scrapper
     container_name: scrapper
-    restart: always
+    #restart: always
     ports:
       - 8081:80
     depends_on:
