--- a/scrapper/Dockerfile
+++ b/scrapper/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.13-alpine
 
 WORKDIR /app
 COPY app .
+ENV PYTHONPATH=.
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 CMD ["python","./main.py"]
