--- a/scrapper/Dockerfile
+++ b/scrapper/Dockerfile
@@ -1,9 +1,10 @@
 FROM python:3.13-alpine
 
 WORKDIR /app
-COPY app .
-ENV PYTHONPATH=.
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python","./main.py"]
+COPY app .
+
+CMD ["python","main.py"]
